quick syntax check

--- a/.buildkite/pipeline_fullchip.yml
+++ b/.buildkite/pipeline_fullchip.yml
@@ -1,24 +1,22 @@
 steps:
 
-# - label: 'full_chip 36h'
-#   agents: { queue: "papers" }
-#   commands:
-#   - steps=rtl,tile_array,glb_top,global_controller,tile_array
-#   - steps=$${steps},dragonphy,soc-rtl,synthesis
-#   - steps=$${steps},place,route,postroute_hold,lvs
-#   - 'mflowgen/test/test_module.sh full_chip
-#        --debug
-#        --update_cache /sim/buildkite-agent/gold.latest
-#        --steps $$steps'
-
-
-- label: 'glb-top synthesis'
+- label: 'full_chip 36h'
   agents: { queue: "papers" }
   commands:
-  - 'mflowgen/test/test_module.sh full_chip glb_top
+  - steps=rtl,tile_array,glb_top,global_controller,tile_array
+  - steps=$${steps},dragonphy,soc-rtl,synthesis
+  - steps=$${steps},place,route,postroute_hold,lvs
+  - 'mflowgen/test/test_module.sh full_chip
        --debug
-       --update_cache /sim/buildkite-agent/gold.$$BUILDKITE_BUILD_NUMBER
-       --steps syn'
+       --update_cache /sim/buildkite-agent/gold.latest
+       --steps $$steps'
+
+# - label: 'glb-top synthesis'
+#   agents: { queue: "papers" }
+#   commands:
+#   - 'mflowgen/test/test_module.sh full_chip glb_top
+#        --debug
+#        --steps syn'
 
 
 ##############################################################################
