--- a/.buildkite/pipeline_mflowgen.yml
+++ b/.buildkite/pipeline_mflowgen.yml
@@ -1,28 +1,32 @@
 steps:
 
-# ########################################################################
-# - label: 'MemCore synth 17m'
-#   agents: { jobsize: "hours" }
-#   commands:
-#   - test=mflowgen/test/test_module.sh
-#   - $$test full_chip tile_array Tile_MemCore --steps synthesis --debug
-# 
-# - wait: ~
-#   continue_on_failure: true
-# 
-# 
-# ########################################################################
-# - label: 'PE synth 23m'
-#   agents: { jobsize: "hours" }
-#   commands:
-#   - test=mflowgen/test/test_module.sh
-#   - $$test full_chip tile_array Tile_PE --steps synthesis --debug
-# 
-# - wait: ~
-#   continue_on_failure: true
-
 ##############################################################################
 # FULL CHIP RUNS - see pipeline_fullchip.yml
+
+##############################################################################
+# INDIVIDUAL TILE RUNS
+
+########################################################################
+- label: 'MemCore synth 17m'
+  agents: { jobsize: "hours" }
+  commands:
+  - echo PASS
+#   - test=mflowgen/test/test_module.sh
+#   - $$test full_chip tile_array Tile_MemCore --steps synthesis --debug
+
+- wait: ~, continue_on_failure: true # Serialize the steps
+
+COMMENT:
+########################################################################
+- label: 'PE synth 23m'
+  agents: { jobsize: "hours" }
+  commands:
+  - test=mflowgen/test/test_module.sh
+  - $$test full_chip tile_array Tile_PE --steps synthesis --debug
+
+# Serialize the steps
+- wait: ~
+  continue_on_failure: true
 
 ##############################################################################
 # TILE_ARRAY RUNS
