--- a/.buildkite/pipeline_mflowgen.yml
+++ b/.buildkite/pipeline_mflowgen.yml
@@ -14,9 +14,8 @@ steps:
 #   - test=mflowgen/test/test_module.sh
 #   - $$test full_chip tile_array Tile_MemCore --steps synthesis --debug
 
-wait: { ~, continue_on_failure: true } # Serialize the steps
+wait: { continue_on_failure: true } # Serialize the steps
 
-COMMENT:
 ########################################################################
 - label: 'PE synth 23m'
   agents: { jobsize: "hours" }
