--- a/.buildkite/pipeline_mflowgen.yml
+++ b/.buildkite/pipeline_mflowgen.yml
@@ -14,7 +14,7 @@ steps:
 #   - test=mflowgen/test/test_module.sh
 #   - $$test full_chip tile_array Tile_MemCore --steps synthesis --debug
 
-wait: { continue_on_failure: true }
+- wait: { continue_on_failure: true }
 
 ########################################################################
 - label: 'PE synth 23m'
