final cleanup before pull

--- a/.buildkite/pipeline_mflowgen.yml
+++ b/.buildkite/pipeline_mflowgen.yml
@@ -1,26 +1,21 @@
 steps:
 
 ##############################################################################
-# FULL CHIP RUNS - see pipeline_fullchip.yml
+# INDIVIDUAL TILE RUNS
 
-# ##############################################################################
-# # INDIVIDUAL TILE RUNS
-# 
-# - label: 'MemCore synth 17m'
-#   agents: { jobsize: "hours" }
-#   commands:
-#   - test=mflowgen/test/test_module.sh
-#   - $$test full_chip tile_array Tile_MemCore --steps synthesis --debug
-# - wait: { continue_on_failure: true } # One step at a time + continue on failure
-# 
-# - label: 'PE synth 23m'
-#   agents: { jobsize: "hours" }
-#   commands:
-#   - test=mflowgen/test/test_module.sh
-#   - $$test full_chip tile_array Tile_PE --steps synthesis --debug
-# - wait: { continue_on_failure: true } # One step at a time + continue on failure
+- label: 'MemCore synth 17m'
+  agents: { jobsize: "hours" }
+  commands:
+  - test=mflowgen/test/test_module.sh
+  - $$test full_chip tile_array Tile_MemCore --steps synthesis --debug
+- wait: { continue_on_failure: true } # One step at a time + continue on failure
 
-
+- label: 'PE synth 23m'
+  agents: { jobsize: "hours" }
+  commands:
+  - test=mflowgen/test/test_module.sh
+  - $$test full_chip tile_array Tile_PE --steps synthesis --debug
+- wait: { continue_on_failure: true } # One step at a time + continue on failure
 
 ##############################################################################
 # TILE_ARRAY RUNS
@@ -40,8 +35,6 @@ steps:
 # To build a cache:
 # --update_cache /sim/buildkite-agent/gold.$$BUILDKITE_BUILD_NUMBER
 
-
-
 ########################################################################
 # Left this in (below) as option/example of longer tile array run
 ########################################################################
@@ -56,4 +49,9 @@ steps:
 # - wait: { continue_on_failure: true } # One step at a time + continue on failure
 # 
 
+##############################################################################
+# FULL CHIP RUNS - see pipeline_fullchip.yml
+
 # For more see pipeline_notes.yml
+
+
