--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,7 @@ coreir  # should be first so we get the latest version
 -e git://github.com/joyliu37/BufferMapping#egg=buffer_mapping
 -e git+git://github.com/pyhdi/pyverilog.git#egg=pyverilog
 -e git+https://github.com/StanfordAHA/lake#egg=lake
--e git://github.com/leonardt/pycoreir.git@context-del-api#egg=coreir
--e git://github.com/phanrahan/magma.git@context-api#egg=magma-lang
+-e git://github.com/phanrahan/magma.git#egg=magma-lang
 -e git://github.com/phanrahan/mantle.git#egg=mantle
 ordered_set
 cosa
