--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -1,8 +1,15 @@
 name: CI Test
 
 on:
+  # Every push
+  push:
+
+  # When requested manually
+  workflow_dispatch:
+
+  # Every morning at 3am -- how does it know which branch to run??
   schedule:
-    - cron '0 3 * * *'
+  - cron: '0 3 * * *'
 
 
 jobs:
