--- a/.buildkite/pipelines/pmtile_synth_only.yml
+++ b/.buildkite/pipelines/pmtile_synth_only.yml
@@ -17,6 +17,12 @@ steps:
 ##############################################################################
 # INDIVIDUAL TILE RUNS
 
+- label: '250MHz PE synth 12m'
+  commands:
+  - $TEST --need_space 30G full_chip tile_array Tile_PE --steps synthesis --debug
+  - .buildkite/pipelines/check_pe_area.sh
+- wait: { continue_on_failure: true } # One step at a time + continue on failure
+
 # TEMPORARY GLB-TILE TEST. RESTORE ORIG TESTS BELOW before merging with master
 - label: 'glb tile 2h'
   commands:
@@ -29,13 +35,17 @@ steps:
 
 
 
-# - label: '250MHz PE synth 12m'
-#   commands:
-#   - $TEST --need_space 30G full_chip tile_array Tile_PE --steps synthesis --debug
-#   - .buildkite/pipelines/check_pe_area.sh
-# - wait: { continue_on_failure: true } # One step at a time + continue on failure
-# 
-# - label: 'MemCore synth 17m'
-#   commands:
-#   - $TEST --need_space 30G full_chip tile_array Tile_MemCore --steps synthesis --debug
-# - wait: { continue_on_failure: true } # One step at a time + continue on failure
+
+
+
+
+
+
+
+
+
+
+- label: 'MemCore synth 17m'
+  commands:
+  - $TEST --need_space 30G full_chip tile_array Tile_MemCore --steps synthesis --debug
+- wait: { continue_on_failure: true } # One step at a time + continue on failure
