--- a/.buildkite/pipelines/pmtile_synth_only.yml
+++ b/.buildkite/pipelines/pmtile_synth_only.yml
@@ -20,7 +20,7 @@ steps:
 # TEMPORARY GLB-TILE TEST. RESTORE ORIG TESTS BELOW before merging with master
 - label: 'glb tile 2h'
   commands:
-  - $TEST --need_space 3G full_chip --steps rtl --debug
+  - mkdir -p full_chip; cp -rp /build/gold.225/full_chip/9-rtl full_chip/
   - $TEST --need_space 3G full_chip glb_top --steps rtl --debug
   - $TEST --need_space 3G full_chip glb_top --steps glb_tile --debug
 
