--- a/.buildkite/pipelines/qrc.yml
+++ b/.buildkite/pipelines/qrc.yml
@@ -1,36 +1,18 @@
 agents: { jobsize: "hours" }
 
-env:
-  GOLD: /build/gold.219
-  TEST: 'echo exit 13 | mflowgen/test/test_module.sh'
-
 steps:
-- label: 'qrc test 5h'
-  commands:
-  - 'source mflowgen/bin/setup-buildkite.sh --dir . --need_space 1G;
-     mflowgen run --design $$GARNET_HOME/mflowgen/full_chip;
-     set -x;
-       ln -s $$GOLD/12-tsmc16;
-       ln -s $$GOLD/20-cadence-innovus-flowsetup;
-       ln -s $$GOLD/28-cadence-innovus-postroute;
-     set +x;
-     echo "--- MAKE PRHOLD"; set -o pipefail;
-     make cadence-innovus-postroute_hold |& tee make-prhold.log'
-- wait: { continue_on_failure: true } # One step at a time + continue on failure
-
-
-- label: 'qrc-2'
-  commands:
-  - 'source mflowgen/bin/setup-buildkite.sh --dir . --need_space 1G;
-     mflowgen run --design $$GARNET_HOME/mflowgen/full_chip;
-     set -x;
-       ln -s $$GOLD/12-tsmc16;
-       ln -s $$GOLD/20-cadence-innovus-flowsetup;
-       ln -s $$GOLD/28-cadence-innovus-postroute;
-     set +x;
-     echo "--- MAKE PRHOLD"; set -o pipefail;
-     make cadence-innovus-postroute_hold |& tee make-prhold.log'
-- wait: { continue_on_failure: true } # One step at a time + continue on failure
+- label:    'qrc test 5h'
+  commands: ${GARNET_HOME}/.buildkite/bin/qrc.sh
+- wait:     { continue_on_failure: true }
 
 
 
+
+# Builds...?
+# {
+#  'agents' : { 'jobsize' : 'hours' },
+#  'steps'  : [ 
+#               { 'label' : 'qrc' , 'commands' : 'qrc.sh' },
+#               { 'wait' : { 'cf' : 'true' } }
+#             ]
+# }
